--- a/m1/index.html
+++ b/m1/index.html
@@ -2,6 +2,9 @@
 <html lang="en-US">
     <head>
         <title>Angular Application</title>
+		
+		<link rel="stylesheet" href="css/style.css" />
+		
         <script src="node_modules/core-js/client/shim.min.js"></script>
         <script src="node_modules/zone.js/dist/zone.js"></script>
         <script src="node_modules/reflect-metadata/Reflect.js"></script>
